<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.agendacontato.leandro.agendacontato.UsuarioActivity"
    android:orientation="vertical"
    android:background="#ffff">

    <EditText
        android:id="@+id/edtCadastroNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/nome"
        android:textColorHint="#696969"
        android:textColor="#696969"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/edtCadastroLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/login"
        android:textColorHint="#696969"
        android:textColor="#696969"
        android:layout_marginBottom="15dp"/>



    <EditText
        android:id="@+id/edtCadastroSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/senha"
        android:textColorHint="#696969"
        android:textColor="#696969"
        android:layout_marginBottom="15dp"/>



</LinearLayout>
